general namespace change this is probably more convenient lol

--- a/CharacterLib.csproj
+++ b/CharacterLib.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>tairasoul.ninah.characterlib</RootNamespace>
+    <RootNamespace>CharacterLib</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>13</LangVersion>
